# food-ordering-system

./: .gitignore  Dockerfile  Makefile  README.md  dagger.json  hello.py  pyproject.toml  pyrightconfig.json
.dagger/: pyproject.toml
projects/common/: pyproject.toml
projects/common/src/common/common_domain/entity/: aggregateroot.py  baseentity.py
projects/common/src/common/common_domain/event/: domain_event.py
projects/common/src/common/common_domain/event/publisher/: domain_event_publisher.py
projects/common/src/common/common_domain/exception/: domain_exception.py
projects/common/src/common/common_domain/valueobject/: identifier.py  money.py  order_approval_status.py  order_status.py  payment_status.py
projects/common/src/common/common_lib/: zoned_datetime.py
projects/common/tests/unit/common/common_domain/valueobject/: test_money.py
projects/infrastructure/: pyproject.toml
projects/infrastructure/docker-compose/: kafka_cluster.yml
projects/infrastructure/src/infrastructure/kafka/kafka_config_data/: kafka_config_data.py  kafka_consumer_config_data.py  kafka_producer_config_data.py
projects/infrastructure/src/infrastructure/kafka/kafka_model/: generate_avro_dataclasses.py
projects/infrastructure/src/infrastructure/kafka/kafka_model/models/: payment_request.py  payment_response.py  restaurant_approval_request.py  restaurant_approval_response.py
projects/order-service/: pyproject.toml
projects/order-service/src/order_service/: __init__.py
projects/order-service/src/order_service/order_application/: container.py
projects/order-service/src/order_service/order_domain/: order_domain_service.py  order_domain_service_impl.py  restaurant_approval_response_message_listener_impl.py
projects/order-service/src/order_service/order_domain/application_service/: order_application_service_impl.py  order_create_command_handler.py  order_create_helper.py  order_track_command_handler.py  payment_response_message_listener_impl.py
projects/order-service/src/order_service/order_domain/application_service/mapper/: order_data_mapper.py
projects/order-service/src/order_service/order_domain/domain_core/entity/: customer.py  order.py  order_item.py  product.py  restaurant.py
projects/order-service/src/order_service/order_domain/domain_core/event/: order_cancelled_event.py  order_created_event.py  order_event.py  order_payed_event.py
projects/order-service/src/order_service/order_domain/domain_core/exception/: order_domain_exception.py  order_not_found_exception.py
projects/order-service/src/order_service/order_domain/domain_core/valueobject/: identifier.py  street_address.py
projects/order-service/tests/: test_order.py
projects/order-service/tests/order_service/order_domain/: conftest.py
projects/order-service/tests/unit/: conftest.py
projects/order-service/tests/unit/order_service/order_domain/: conftest.py
projects/order-service/tests/unit/order_service/order_domain/application_service/: test_order_application_service.py
projects/ordering-service/: pyproject.toml
projects/ordering-service/src/ordering_service/: __init__.py
projects/ordering-service/src/ordering_service/domain_core/entity/: order.py
projects/ordering-service/src/ordering_service/domain_core/valueobject/: identifier.py
projects/ordering-service/src/ordering_service/order_domain/domain_core/entity/: order.py
projects/ordering-service/src/ordering_service/order_domain/domain_core/valueobject/: identifier.py
projects/ordering-service/tests/: test_order.py
(+19 files in other folders)
