[project]
name = "food-ordering-system"
version = "0.1.0"
description = "Project following udemy course that was originally done in Java"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "common",
    "dependency-injector>=4.48.3",
    "tomli>=2.4.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.1",
]
dagger = [
    "monorepo-dagger",
]

[tool.uv.workspace]
members = ["projects/*"]

[tool.uv.sources]
monorepo-dagger = { path = ".dagger" }
common = { workspace = true }

[project.entry-points."dagger.mod"]
main_object = "monorepo_dagger:MonorepoDagger"
