[project]
name = "order-service"
version = "0.1.0"
description = "Ordering Service"
readme = "README.md"
authors = [
    { name = "Nathan Blok", email = "ndblok@gmail.com" }
]
requires-python = ">=3.13.1"
dependencies = [
    "common",
    "dependency-injector>=4.48.3",
    "pydantic[email,timezone]>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
common = { workspace = true }
